fix: footer text align setting

--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -5,4 +5,5 @@ footer {
   justify-content: center;
   padding: 50px 10px;
   font-size: 1.2rem;
+  text-align: center;
 }
